2006-04-11 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Systematic review of enableFields and deleteClause in mod_web_dmail. Use BEfunc instead of pageSelect method.
	* Recover extension constraints in ext_emconf.php.

2006-04-07 Jan-Erik Revsbech <jer@moccompany.com>
	* Fix Option includeMedia was not used when fetching direct mail. All mails were sent using absolute links.
	
2006-04-07 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to plain text links statistics.

2006-04-06 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add missing label localization in dmailer log.
	* Statistics: group links, so that identical links of html and text mails are listed on the same line. Thanks to Martin Kutschker.
	* Statistics: parse the links, so that for internal urls page title and path (tooltip) are shown. Thanks to Martin Kutschker.
	* Allow tab as option for CSV-import field separator. See bugtracker issue 3139.

2006-04-04 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* dmailer should not remove comments when inside script and style tags.

2006-03-24 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Use $_SERVER['PHP_SELF'] when available in dmailerd.phpcron and returnmail.phpsh
	* Fix bugtracker issue 2982: do not send emails without any content.
	* Correction to two incorrect characters in locallang_csh_web_txdirectmailM1.xml
	* Allow $TYPO3_CONF_VARS['EXTCONF'][$_EXTKEY]['addRecipFields'] to extend the list of fields that may be imported.

2006-03-23 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* On behalf of Ralf Hettinger: three new functions importRecords_checkMail, importRecords_checkImportDublettes and importRecords_makeName for more filtering of the imported CSV values.

2006-03-19 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Fix bugtracker issue 2924.
	* Fix bugtracker issue 2925.
	* Make direct_mail conflict with plugin_mgm.